fix padding on mobile

--- a/src/pages/DashboardPage/components/LendTab/LendTab.module.scss
+++ b/src/pages/DashboardPage/components/LendTab/LendTab.module.scss
@@ -67,7 +67,7 @@
   }
 
   @media (max-width: 960px) {
-    padding-bottom: 16px;
+    padding-bottom: 0;
   }
 }
 
